# DxCompanion

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: pylint.yml
projects/: .gitignore
src/: composer.py  composer_utils.py  main.py  service_locator.py  settings.py
src/models/: __init__.py  app_context.py  composer.py  project.py
src/presentation/: __init__.py  composer.py  terminal.py
src/presentation/component/: __init__.py  action_option_list.py  message.py  sidebar.py  terminal.py  terminal_modal.py
src/presentation/composer/: __init__.py  composer_container.py  composer_message.py  composer_packages_table.py  composer_pan.py  composer_screen.py  composer_script_button.py  composer_script_option_list.py
src/presentation/docker/: __init__.py  container_log_widget.py  container_select.py  container_table.py
src/presentation/package_manager/: __init__.py  container.py  packages_table.py  screen.py
src/presentation/summary/: __init__.py  composer_card.py  docker_card.py  package_card.py  summary_container.py  summary_screen.py  system_card.py
src/services/: __init__.py  composer_client.py  docker.py  docker_client.py  system_status.py
src/services/package_manager/: __init__.py  abstract_package_manager.py  composer_package_manager.py  uv_package_manager.py
src/tcss/: layout.tcss
