[project]
name = "project-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.2",
    "textual-terminal>=0.3.0",
    "textual>=0.83.0",
    "typer>=0.12.5",
]

[tool.uv]
dev-dependencies = [
    "textual-dev>=1.6.1",
]
